--- a/VERSIONS.adoc
+++ b/VERSIONS.adoc
@@ -1,5 +1,15 @@
 = Versions
 
+== 0.1.0 (2022-02-12)
+
+* Added Caliber - Brooke Kuhlmann
+* Updated picker message when gem is unknown or uninstalled - Brooke Kuhlmann
+* Updated to Dead End 3.1.0 - Brooke Kuhlmann
+* Updated to Git Lint 3.2.0 - Brooke Kuhlmann
+* Updated to RSpec 3.11.0 - Brooke Kuhlmann
+* Updated to Refinements 9.2.0 - Brooke Kuhlmann
+* Removed README badges - Brooke Kuhlmann
+
 == 0.0.0 (2022-01-29)
 
 * Added Dry Monads gem - Brooke Kuhlmann
