--- a/VERSIONS.adoc
+++ b/VERSIONS.adoc
@@ -1,5 +1,14 @@
 = Versions
 
+== 0.5.0 (2022-08-01)
+
+* Fixed presenter labeled and named versions and package concatenation - Brooke Kuhlmann
+* Added Circle CI SimpleCov artifacts - Brooke Kuhlmann
+* Added presenter safe default construction - Brooke Kuhlmann
+* Updated SimpleCov configuration to use filters and minimum coverage - Brooke Kuhlmann
+* Updated finder and loader to build presenter with default - Brooke Kuhlmann
+* Refactored presenter methods and specs to be alphabetically sorted - Brooke Kuhlmann
+
 == 0.4.0 (2022-07-17)
 
 * Updated to Caliber 0.11.0 - Brooke Kuhlmann
