--- a/README.adoc
+++ b/README.adoc
@@ -116,6 +116,15 @@ This makes it easier to automate the updating of your gem specification version 
 
 == Development
 
+To contribute, run:
+
+[source,bash]
+----
+git clone https://github.com/bkuhlmann/spek
+cd spek
+bin/setup
+----
+
 You can also use the IRB console for direct access to all objects:
 
 [source,bash]
