--- a/VERSIONS.adoc
+++ b/VERSIONS.adoc
@@ -1,5 +1,17 @@
 = Versions
 
+== 1.0.0 (2022-12-25)
+
+* Fixed RuboCop Style/RequireOrder issue - Brooke Kuhlmann
+* Added RSpec binstub - Brooke Kuhlmann
+* Updated to Debug 1.7.0 - Brooke Kuhlmann
+* Updated to Dry Monads 1.6.0 - Brooke Kuhlmann
+* Updated to RSpec 3.12.0 - Brooke Kuhlmann
+* Updated to Refinements 10.0.0 - Brooke Kuhlmann
+* Updated to Ruby 3.1.3 - Brooke Kuhlmann
+* Updated to Ruby 3.2.0 - Brooke Kuhlmann
+* Updated to Versionaire 11.0.0 - Brooke Kuhlmann
+
 == 0.6.0 (2022-10-22)
 
 * Fixed Rakefile RSpec initialization - Brooke Kuhlmann
