--- a/README.adoc
+++ b/README.adoc
@@ -17,7 +17,7 @@ toc::[]
 * Supports loading gems by path to specification.
 * Supports picking gems by name with optional version selection.
 * Supports link:https://semver.org[semantic versions] via
-  link:https://www.alchemists.io/projects/versionaire[Versionaire].
+  link:https://alchemists.io/projects/versionaire[Versionaire].
 
 == Requirements
 
@@ -35,7 +35,7 @@ bin/setup
 == Usage
 
 This gem makes interacting with Ruby gems easier by providing foundational objects for which you can
-built on top of. link:https://www.alchemists.io/projects/gemsmith[Gemsmith] is built on top of this
+built on top of. link:https://alchemists.io/projects/gemsmith[Gemsmith] is built on top of this
 gem if you need working example.
 
 === Presenter
@@ -141,19 +141,19 @@ To test, run:
 bin/rake
 ----
 
-== link:https://www.alchemists.io/policies/license[License]
+== link:https://alchemists.io/policies/license[License]
 
-== link:https://www.alchemists.io/policies/security[Security]
+== link:https://alchemists.io/policies/security[Security]
 
-== link:https://www.alchemists.io/policies/code_of_conduct[Code of Conduct]
+== link:https://alchemists.io/policies/code_of_conduct[Code of Conduct]
 
-== link:https://www.alchemists.io/policies/contributions[Contributions]
+== link:https://alchemists.io/policies/contributions[Contributions]
 
-== link:https://www.alchemists.io/projects/spek/versions[Versions]
+== link:https://alchemists.io/projects/spek/versions[Versions]
 
-== link:https://www.alchemists.io/community[Community]
+== link:https://alchemists.io/community[Community]
 
 == Credits
 
-* Built with link:https://www.alchemists.io/projects/gemsmith[Gemsmith].
-* Engineered by link:https://www.alchemists.io/team/brooke_kuhlmann[Brooke Kuhlmann].
+* Built with link:https://alchemists.io/projects/gemsmith[Gemsmith].
+* Engineered by link:https://alchemists.io/team/brooke_kuhlmann[Brooke Kuhlmann].
