--- a/VERSIONS.adoc
+++ b/VERSIONS.adoc
@@ -1,5 +1,14 @@
 = Versions
 
+== 1.1.0 (2023-04-18)
+
+* Added presenter banner - Brooke Kuhlmann
+* Updated Reek configuration to disable long parameter lists - Brooke Kuhlmann
+* Updated presenter labeled summary to match banner delimiter - Brooke Kuhlmann
+* Updated to Caliber 0.30.0 - Brooke Kuhlmann
+* Updated to Ruby 3.2.2 - Brooke Kuhlmann
+* Refactored presenter to compress intermediate arrays with mutation - Brooke Kuhlmann
+
 == 1.0.2 (2023-03-22)
 
 * Updated Reek dependency to not be required - Brooke Kuhlmann
