--- a/VERSIONS.adoc
+++ b/VERSIONS.adoc
@@ -1,5 +1,11 @@
 = Versions
 
+== 2.0.0 (2023-06-13)
+
+* Updated to Debug 1.8.0 - Brooke Kuhlmann
+* Updated to Refinements 11.0.0 - Brooke Kuhlmann
+* Updated to Versionare 12.0.0 - Brooke Kuhlmann
+
 == 1.1.0 (2023-04-18)
 
 * Added presenter banner - Brooke Kuhlmann
