--- a/VERSIONS.adoc
+++ b/VERSIONS.adoc
@@ -1,5 +1,13 @@
 = Versions
 
+== 2.1.0 (2023-09-30)
+
+* Fixed RuboCop Packaging/BundlerSetupInTests issues - Brooke Kuhlmann
+* Fixed Zeitwerk loader - Brooke Kuhlmann
+* Added gem loader - Brooke Kuhlmann
+* Updated GitHub issue template with simplified sections - Brooke Kuhlmann
+* Updated Rake RSpec task configuration to not be verbose - Brooke Kuhlmann
+
 == 2.0.1 (2023-06-19)
 
 * Updated to Caliber 0.35.0 - Brooke Kuhlmann
