Updated gem specification documentation URI as homepage URI
Necessary to resolve a RubyGems bug where the `homepage_uri` takes precedence over the `homepage` URI despite both being equal. Use of `homepage_uri` ensures the RubyGems documentation gets updated properly despite having the same URI for `homepage`. 🙃

Due to this change, the `documenation_uri` is no longer needed as RubyGems will print a warning when both the `homepage_uri` and `documentation_uri` are used.

Milestone: patch

--- a/README.adoc
+++ b/README.adoc
@@ -60,7 +60,7 @@ specification = Gem::Specification.new do |spec|
   spec.metadata = {
     "bug_tracker_uri" => "https://github.com/bkuhlmann/demo/issues",
     "changelog_uri" => "https://alchemists.io/projects/demo/versions",
-    "documentation_uri" => "https://alchemists.io/projects/demo",
+    "homepage_uri" => "https://alchemists.io/projects/demo",
     "funding_uri" => "https://github.com/sponsors/bkuhlmann",
     "label" => "Demo",
     "rubygems_mfa_required" => "true",
