--- a/VERSIONS.adoc
+++ b/VERSIONS.adoc
@@ -1,5 +1,11 @@
 = Versions
 
+== 3.9.0 (2024-10-28)
+
+* 🔼 Updated to Refinements 12.10.0 - Brooke Kuhlmann
+* 🔼 Updated to Versionaire 13.9.0 - Brooke Kuhlmann
+* 🔼 Updated to Zeitwerk 2.7.0 - Brooke Kuhlmann
+
 == 3.8.0 (2024-10-07)
 
 * 🔼 Updated to Refinements 12.9.0 - Brooke Kuhlmann
