Added version release notes

--- a/VERSIONS.adoc
+++ b/VERSIONS.adoc
@@ -1,5 +1,16 @@
 = Versions
 
+== 4.0.0 (2024-12-27)
+
+* 🟢 Added Core gem - Brooke Kuhlmann
+* 🔼 Updated to Caliber 0.68.0 - Brooke Kuhlmann
+* 🔼 Updated to IRB Kit 1.0.0 - Brooke Kuhlmann
+* 🔼 Updated to Refinements 13.0.0 - Brooke Kuhlmann
+* 🔼 Updated to Ruby 3.4.0 - Brooke Kuhlmann
+* 🔼 Updated to Versionaire 14.0.0 - Brooke Kuhlmann
+* ⛔️ Removed undefined default label - Brooke Kuhlmann
+* 🔁 Refactored presenter to use Core empty strings - Brooke Kuhlmann
+
 == 3.10.0 (2024-11-09)
 
 * 🔼 Updated to Caliber 0.64.0 - Brooke Kuhlmann
